--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
   "keywords": [
     "fix",
     "print",
-    "vue-pdf@4.0.6"
+    "vue-pdf@4.0.6",
+    "fixPrint"
   ],
+  "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "pdfjs-dist": "2.0.943",
+    "raw-loader": "^0.5.1",
+    "vue-resize-sensor": "^2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mrjianghan/fixPrintVue-pdf.git"
+  },
   "author": "jianghan",
   "license": "ISC"
 }
